fixing broken style

--- a/front_end/style.css
+++ b/front_end/style.css
@@ -47,6 +47,7 @@
 
       #sessionNest{
             text-align:center;
+            width:40%;
             min-width:400px;
             padding:10px;
             background:#ddd;
